coffehelmChartIngress/templates/flask-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 5000
  selector:
    app: flask
